syntax = "proto3";

option csharp_namespace = "GrpcService1";

package customers;


service CustomersMaintenance {
  
  rpc GetAllCustomers (CustomersRequest) returns (stream CustomersResponse);

  rpc CreateCustomer(CreateCustomerRequest) returns (CreateCustomerResponse);

  rpc DeleteCustomer(DeleteCustomerRequest) returns (DeleteCustomerResponse);

  rpc UpdateCustomer(UpdateCustomerRequest) returns (UpdateCustomerResponse);

  rpc DeleteAllCustomers(DeleteAllCustomersRequest) returns (DeleteAllCustomersResponse);
}

message DeleteAllCustomersRequest{

}

message DeleteAllCustomersResponse{
	string Result = 1;
	string Message = 2;
}

message CustomersRequest {
  
}

message CustomersResponse {
  string FirstName = 1;
  string LastName = 2;
  string Address = 3;
  string Phone = 4;
  string Id = 5;
}

message CreateCustomerRequest {
	string FirstName = 1;
	string LastName = 2;
	string Address = 3;
	string Phone = 4;
}

message CreateCustomerResponse {
	string Id = 1;
}

message DeleteCustomerRequest{
	string Id = 1;
}

message DeleteCustomerResponse{
	string FirstName = 1;
	string LastName = 2;
	string Address = 3;
	string Phone = 4;
	string Id = 5;
	string Result = 6;
	string Message = 7;
}

message UpdateCustomerRequest{
	string FirstName = 1;
	string LastName = 2;
	string Address = 3;
	string Phone = 4;
	string Id = 5;
}

message UpdateCustomerResponse{
	string Result = 1;
	string Message = 2;
}